Added gradle tasks to download openjfx mods and build modular image